--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2018"
 repository = "https://github.com/Robzz/lsys"
 
 [dependencies]
+image = "0.23"
 imageproc = "0.20"
+nalgebra = "0.21"
+thiserror = "1.0"
